--- a/index.css
+++ b/index.css
@@ -2,67 +2,50 @@
     margin: 0;
     padding: 0;
 }
-/* 
-.navbar-text{
-    display: flex-end;
-
-} */
-.navbar{
-   justify-content: space-evenly;
+.container{
+    max-width: 900px;
+    margin: auto;
 }
-
-.section{
+.products{
     display: flex;
-    justify-content: space-evenly;
-}
-img{
-    border-radius: 10%;
-    padding: 10px;
+    gap:40px
+   
+
 }
 
-.price{
-    display: flex;
-    margin: 10px;
+.product-img{
+    flex: 1;
     
+   
 }
-.ctn{
+
+.product-details{
+    flex: 1;
+}
+.shoe{
+    width: 100%;
+    height: 400px;
+}
+.shoe img{
+width: 100%;
+height: 100%;
+border-radius: 15%;
+}
+.gallery-img{
+    display: flex;
+    gap: 20px;
+}
+
+.gallery-img img{
+    width: 100%;
+    border-radius: 15%;
+    margin-top: 20px;
+}
+
+h2{
     color: orange;
-    background-color: peru;
-    width: 50px;
-    border-radius: 10px;
-    height: 30px;
 }
-span{
-    color: white;
-    margin-left: 2px;
+.product-details p{
+    font-size: 20px;
+    font-weight: bold;
 }
-.btn{
-    background-color: orangered;
-    border-radius: 6%;
-    height: 30px;
-    width: 150px;
-    color: white;
-    justify-self: unset;
-   
-   
-    
-}
-.btn p{
-    font-size: 10px;
-}
-.trick{
-    display: flex;
-    width: 100px;
-    justify-content: space-evenly;
-    height: 30px;
-    border-radius: 8%;
-    margin-right: 3px;
-}
-.cart{
-    display: flex;
-    margin: 20px;
-    justify-content: center;
-}
-
-
-/* practise */
