--- a/index.css
+++ b/index.css
@@ -57,10 +57,37 @@ h2{
 .fifty{
     color: orange;
     border-radius: 5px;
+    border: none;
+    outline: none;
+    background-color: 1#F7D69C;
+    height: 25px;
 }
 
 
 .cart{
     display: flex;
     gap: 5%;
+}
+.btn{
+    display: flex;
+    justify-content: space-evenly;
+    width: 150px;
+    align-items: center;
+    gap:2%;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    
+}
+.ctn{
+    display: flex;
+    justify-content: space-evenly;
+    width: 200px;
+    align-items: center;
+    background-color: orange;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    outline: none;
 }
